cluster-config/ingress/ingress-chat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-chat
  namespace: chat
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - host: chat.festivalstream.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-svc
            port:
              number: 80
