cluster-config/ingress/ingress-streaming.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-streaming
  namespace: streaming
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: stream.festivalstream.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streaming-svc
            port:
              number: 80
