cluster-config/ingress/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  namespace: vod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: vod.festivalstream.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: -svc
            port:
              number: 80
